fixed contrast, width issue

--- a/src/app.css
+++ b/src/app.css
@@ -47,11 +47,12 @@ a, button {
     -webkit-tap-highlight-color: transparent;
 }
 
-@layer base {
-    body {
-        @apply flex flex-col bg-yellow-100;
+body {
+        @apply relative flex flex-col bg-yellow-100 ;
         min-height: 100dvh;
     }
+@layer base {
+    
 
     div[class*="you__tube"] > img {
 
